upload of files

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,8 @@
     <title>Google Sign-In</title>
 </head>
 <body>
+    <!-- <img src="http://localhost:3000/imagen/usuarios/5d12e2a7f4469e1fe494e0d0-553.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c3VhcmlvIjp7InJvbGUiOiJBRE1JTl9ST0xFIiwiZXN0YWRvIjp0cnVlLCJnb29nbGUiOmZhbHNlLCJfaWQiOiI1ZDEyZTJhN2Y0NDY5ZTFmZTQ5NGUwZDAiLCJub21icmUiOiJUZXN0IDEiLCJlbWFpbCI6InRlc3QxQG1haWwuY29tIiwiX192IjowfSwiaWF0IjoxNTYzMDgzNTk1LCJleHAiOjE1NjM2ODgzOTV9.JhJmK7KoGcbF77TlzK7-URBvdGGbYV-nFugVfFFLhk4" alt=""> -->
+
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
     <a href="#" onclick="signOut();">Sign out</a>
